syntax = "proto3";

package order;

option go_package = "protoc/order;order";

service OrderService {
	rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse);
	rpc UpdateOrder(UpdateOrderRequest) returns (UpdateOrderResponse);
	rpc GetAllOrders(GetAllOrdersRequest) returns (GetAllOrdersResponse);
	rpc GetOrderById(GetOrderByIdRequest) returns (GetOrderByIdResponse);
	rpc DeleteOrder(DeleteOrderRequest) returns (DeleteOrderResponse);
}
message CreateOrderRequest {
	uint32 user_id = 1;
	uint32 product_id = 2;
	uint32 quantity = 3;
	string status = 4;
}
message CreateOrderResponse {
	string msg = 1;
	uint32 status = 2;
}

message UpdateOrderRequest {
	uint32 id = 1;
	uint32 user_id = 2;
	uint32 product_id = 3;
	uint32 quantity = 4;
	string status = 5;
}
message UpdateOrderResponse {
	string msg = 1;
	uint32 status = 2;
}
message GetAllOrdersRequest {}

message Order {
	uint32 id = 1;
	uint32 user_id = 2;
	uint32 product_id = 3;
	uint32 quantity = 4;
	string status = 5;
}
message GetAllOrdersResponse {
	repeated Order orders = 1;
}
message GetOrderByIdRequest {
	uint32 order_id = 1;
}
message GetOrderByIdResponse {
	string msg = 1;
	uint32 status = 2;
	Order order = 3;
}
message DeleteOrderRequest {
	uint32 order_id = 1;
}
message DeleteOrderResponse {
	string msg = 1;
	uint32 status = 2;
}

